Closed Bug 320085 Opened 19 years ago Closed 19 years ago

[spatial navigation] cannot focus <button>

Categories

(Core :: DOM: UI Events & Focus Handling, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: Mook, Assigned: dougt)

References

()

Details

(Keywords: testcase)

Attachments

(1 file)

(Testcase coming up) For some reason, I cannot focus <button> elements via spatial navigation. <a>, <input type="button"> work fine. (And no, I do not have a patch - I don't even know where to begin this time ;) )
Keywords: testcase
Index: nsSpatialNavigationUtils.cpp =================================================================== RCS file: /cvsroot/mozilla/extensions/spatialnavigation/src/nsSpatialNavigationUtils.cpp,v retrieving revision 1.7 diff -r1.7 nsSpatialNavigationUtils.cpp 364a365,367 > if (isContentOfType(currentContent, "button")) > return PR_TRUE; > fixed on trunk.
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Status: RESOLVED → VERIFIED
Component: Keyboard: Navigation → User events and focus handling
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: