Fixing bug 320085.  cannot focus <button>.  This form element was never part of |IsTargetable|.  I have added a case for it. NPODB